--- a/MeshReconstruction/MeshReconstruction.vcxproj.filters
+++ b/MeshReconstruction/MeshReconstruction.vcxproj.filters
@@ -36,4 +36,7 @@
       <Filter>標頭檔</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="GpuRoutines.cu" />
+  </ItemGroup>
 </Project>
